[package]
name = "ypm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.11"
tokio = { version = "1.38", features = ["full"] }
sha2 = "0.10"
serde_json = "1.0.120"
base64 = "0.22.1"